--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <button class="btn">Create Custom Grid</button>
+    <div class="buttons">
+      <button class="btn">Custom Grid</button>
+      <button class="btn theme">Change Theme</button>
+    </div>
     <div class="container"></div>
 
     <script src="script.js"></script>
